going back to clean up chem ia

--- a/references.bib
+++ b/references.bib
@@ -1,78 +1,95 @@
-@article{what-is-yeast,
+@online{what-is-yeast,
     title = {{What is Yeast?}},
     year = 2019,
     url = {https://www.singerinstruments.com/resource/what-is-yeast/},
     urldate = {2022-03},
-    publisher = {Singer Instruments}
+    organization = {Singer Instruments},
+    date = {2015-03-15}
 }
 
-@article{britannica,
+@online{britannica,
     author = {{The Editors of Encyclopaedia Britannica}},
     title = {{yeast}},
     url = {https://www.britannica.com/science/yeast-fungus},
-    urldate = {2022-03}
+    urldate = {2022-03},
+    organization = {Britannica}
 }
 
-@article{know-your-yeast,
-    year = 2016,
-    title = {KNOW YOUR YEAST},
+@online{know-your-yeast,
+    year = {2016-12-01},
+    title = {Know Your Yeast},
     author = {Evelyn Sherdon},
     url = {https://www.bakefromscratch.com/know-your-yeast},
-    urldate = {2022-03}
+    urldate = {2022-03},
+    organization = {Bake From Scratch}
 }
 
-@article{masterclass,
-    author = {Apollonia Poilane},
+@online{masterclass,
+    author = {Apollonia Poilâne},
     title = {{How to Activate Yeast : When Is it Necessary to Activate Yeast?}},
     url = {https://www.masterclass.com/articles/how-to-activate-yeast-explained#how-to-activate-yeast},
     urldate = {2022-03},
-    year = 2021
+    year = {2022-02-24},
+    organization = {MasterClass}
 }
 
-@article{everyday-dishes,
-    year = 2018,
+@online{everyday-dishes,
     author = {Cheryl Najafi},
     url = {https://everydaydishes.com/simple-food-recipes/how-to-activate-dry-yeast-video/},
     urldate = {2022-03},
-    title = {{How to Activate Dry Yeast}}
+    title = {{How to Activate Dry Yeast Video}},
+    date = {2018-04-04},
+    organization = {Everyday Dishes}
 }
 
-@article{aerobic-respiration,
+@online{aerobic-respiration,
     author = {Katy McLaughlin},
-    year = 2020,
     title = {{Aerobic Respiration}},
     urldate = {2022-03},
-    url = {https://biologydictionary.net/aerobic-respiration/}
+    url = {https://biologydictionary.net/aerobic-respiration/},
+    date = {2020-08-25},
+    organization = {Biology Dictionary}
 }
 
-@article{nad-importance,
+@online{nad-importance,
     url = {https://www.elysiumhealth.com/blogs/science101/what-is-nad-and-why-is-it-important},
     title = {{What is NAD+ and Why Is it Important?}},
     urldate = {2022-03},
+    organization = {Elysium}
 }
 
-@article{sewer-disposal,
-    title = {{Sewer Disposal: What Can Go Down the Drain?}},
-    url = {https://blink.ucsd.edu/safety/research-lab/hazardous-waste/disposal-guidance/sewer.html},
-    urldate = {2022-03},
-    year = 2021
+@online{opentextbookbc,
+    title = {{Enzymes - Understanding Ingredients for the Canadian Baker}},
+    date = {2015-10-24},
+    organization = {Pressbooks},
+    url = {https://opentextbc.ca/ingredients/chapter/enzymes/},
+    urldate = {2022-03}
 }
 
-@article{baking-yeast-dispose,
+@online{baking-yeast-disposal,
     title = {{How do you dispose of baking yeast?}},
     url = {https://cementanswers.com/how-do-you-dispose-of-baking-yeast/},
     urldate = {2022-03},
-    author = {Jonathan Holmes}
+    author = {Jonathan Holmes},
+    organization = {Cement Answers}
+}
+
+@online{sewer-disposal,
+    title = {{Sewer Disposal: What Can Go Down the Drain?}},
+    url = {https://blink.ucsd.edu/safety/research-lab/hazardous-waste/disposal-guidance/sewer.html},
+    urldate = {2022-03},
+    date = {2021-06-29},
+    organization = {UC San Diego}
 }
 
 @book{biochem,
     author = {Jeremy M. Berg and John L. Tymoczko and Lubert Stryer},
     publisher = {{W. H. Freeman and Company}},
-    title = {{Biochemistry SIXTH EDITION}},
+    title = {{Biochemistry Sixth Edition}},
     year = {2006}
 }
 
-@bool{data-booklet,
+@book{data-booklet,
     publisher = {{International Baccalaureate Organization}},
     title = {{Chemistry data booklet}},
     year = {2014}
