--- a/ia.tex
+++ b/ia.tex
@@ -38,23 +38,24 @@
 \pagenumbering{arabic}
 
 \section{Introduction}
-I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually led me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to make my own bread, finding and reading basic recipes with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exist many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these different types of dough is the amount of sugar used, and although some of these repices do not call for yeast, I was still interested by its function in baking, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
+I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually led me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to make my own bread, finding and reading basic recipes with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exist many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these different types of dough is the amount of sugar used, and although some of these recipes do not call for yeast, I was still interested by its function in baking, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
 
 \section{Background}
 
 \subsection{What Is Yeast}
-Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many other life forms, yeast requires food to survive, by converting carbohydrates or saccharides into energy through aerobic or anaerobic respiration \parencite{what-is-yeast}. Among the many different types of yeast, the one used in this internal assessment is part of the \emph{Saccharomyces cerevisiae} strain - specifically, baker's yeast \parencite{britannica}.
+Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many other life forms, yeast requires food to survive, by converting carbohydrates or saccharides into energy through aerobic or anaerobic respiration (“What is Yeast?”, 2015). Among the many different types of yeast, the one used in this internal assessment is part of the \emph{Saccharomyces cerevisiae} strain - specifically, baker's yeast (The Editors
+of Encyclopaedia Britannica, n.d.).
 
 \medskip
 
-This internal assessment will focus on the use of active dry yeast, which contain pellets of live yeast cells coated with a layer of dehydrated yeast cells, \parencite{know-your-yeast} allowing it to stay dormant, giving it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37\,\si{\celsius} to 43\,\si{\celsius} (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing, ensuring that the yeast gets dissolved in the water \parencite{masterclass}.
+This internal assessment will focus on the use of active dry yeast, which contain pellets of live yeast cells coated with a layer of dehydrated yeast cells, (Sherdon, 2016) allowing it to stay dormant, giving it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37\,\si{\celsius} to 43\,\si{\celsius} (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing, ensuring that the yeast gets dissolved in the water (Poilâne, 2022-02-24).
 
 \subsection{Aerobic and Anaerobic Respiration in Yeast}
 It is well known that yeast reacts with glucose to produce ethanol and carbon dioxide. To explore the details of how this works, it is crucial to understand how yeast undergoes both aerobic and anaerobic respiration.
 
 \medskip
 
-Aerobic respiration is much more efficient and optimal than anaerobic respiration because significantly more ATP (adenosine triphosphate, energy carrying molecule) is produced. The chemical formula for aerobic respiration is given below:
+Aerobic respiration is much more efficient and optimal than anaerobic respiration because significantly more ATP (adenosine triphosphate, energy carrying molecule) is produced (Berg et al., 2006). The chemical formula for aerobic respiration is given below:
 \begin{equation}
     \ce{\underset{\text{Glucose}}{\ce{C6H12O6}} + 6O2 ->[cellular respiration] 6CO2 + 6H2O + ATP}
 \end{equation}
@@ -68,7 +69,7 @@ Aerobic respiration is broken down into 3 steps:
 
 \medskip
 
-However, the focus of this internal assessment is on anaerobic respiration of yeast due to the limited supply of oxygen in the environment that the experiment was carried out in. When exploring the details of anaerobic respiration, glycolysis is determined to be a step that both aerobic and anaerobic respiration share, and it itself can be split up ito 3 steps\parencite{biochem}.
+However, the focus of this internal assessment is on anaerobic respiration of yeast due to the limited supply of oxygen in the environment that the experiment was carried out in. When exploring the details of anaerobic respiration, glycolysis is determined to be a step that both aerobic and anaerobic respiration share, and it itself can be split up ito 3 steps (Berg et al., 2006).
 
 \newpage
 
@@ -80,7 +81,7 @@ The first step of glycolysis converts glucose into fructose 1,6-biphosphate (F-1
     \label{fig:figure1}
 \end{figure}
 
-Glucose goes through a series of reactions catalyzed by multiple enzymes (represented by straight arrows), which consumes \ce{2ATP} in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group (\ce{HPO_{4}^{2-}}) gets transferred from each ATP to the sugars that glucose gets broken down into, before forming F-1,6-BP.
+Glucose goes through a series of reactions catalyzed by multiple enzymes (represented by straight arrows), which consumes \ce{2ATP} in the process. ATP turns to ADP (adenosine diphosphate) when a phosphate group (\ce{HPO_{4}^{2-}}) gets transferred from each ATP to the sugars that glucose gets broken down into, before forming F-1,6-BP (Berg et al., 2006).
 
 \medskip
 
@@ -92,7 +93,7 @@ The second step of glycolysis involves splitting F-1,6-BP into 2 three-carbon fr
     \label{fig:figure2}
 \end{figure}
 
-Only GAP can continue the glycolysis process, but since GAP and DHAP exist in equilibrium, all the DHAP eventually gets converted to GAP.
+Only GAP can continue the glycolysis process, but since GAP and DHAP exist in equilibrium, all the DHAP eventually gets converted to GAP (Berg et al., 2006).
 
 \newpage
 
@@ -104,19 +105,20 @@ The third and final step of glycolysis converts the DHAP to pyruvate, another th
     \label{fig:figure3}
 \end{figure}
 
-Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called \ce{NAD+} (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes) \parencite{nad-importance} gets reduced to NADH while GAP is simultaneously oxidized. The phosphate groups that were taken from ATP in the first step is combined with ADP twice to form \ce{2ATP}. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed \parencite{biochem}. Thus, the net equation for the formation of pyruvate is thus given by:
+Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called \ce{NAD+} (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes)  (“What is NAD+ and Why
+Is it Important?”, n.d.) gets reduced to NADH while GAP is simultaneously oxidized. The phosphate groups that were taken from ATP in the first step is combined with ADP twice to form \ce{2ATP}. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed (Berg et al., 2006). Thus, the net equation for the formation of pyruvate is thus given by:
 \begin{equation}
     \ce{Glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> 2Pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
 \end{equation}
 
-According to Equation (2), the end result of glycolysis leaves 2 pyruvate, 2 NADH, 2 ATP, 2 \ce{H2O}, and 2 \ce{H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
+According to Equation (2), the end result of glycolysis leaves \ce{2pyruvate}, \ce{2NADH}, \ce{2ATP}, \ce{2H2O}, and \ce{2H+}. If there is unreacted glucose, glycolysis will continue. However, a cell's supply of \ce{NAD+} is limited, so it must be regenerated. In aerobic respiration, the pyruvate goes through the tricarboxylic acid cycle to produce even more NADH that eventually gets oxidized to \ce{NAD+} during oxidative phosphorylation. In anaerobic respiration, fermentation provides an alternate pathway to turn the NADH back to \ce{NAD+}.
 
 \medskip
 
 % TODO figure out when to use name and chemical
 % TODO chemical capitals
 % TODO add more references
-For yeast, alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are waste products. It consists of 2 steps that are also catalyzed by enzymes. The first step in this conversion process involves the decarboxylation of pyruvate to acetaldehyde, producing carbon dioxide as a by product, as shown below \parencite{biochem}:
+For yeast, alcoholic fermentation converts pyruvate into ethanol and carbon dioxide, both of with are waste products. It consists of 2 steps that are also catalyzed by enzymes. The first step in this conversion process involves the decarboxylation of pyruvate to acetaldehyde, producing carbon dioxide as a by product, as shown below (Berg et al., 2006):
 \begin{equation}
     \ce{\underset{\text{Pyruvate}}{\ce{CH3COCOO-}} + H+ -> \underset{\text{Acetaldehyde}}{\ce{CH3CHO}} + CO2}
 \end{equation}
@@ -126,7 +128,7 @@ In the second step, acetaldehyde gets reduced to ethanol and NADH gets oxidized 
     \ce{CH3CHO + NADH + H+ -> \underset{\text{Ethanol}}{\ce{C2H5OH}} + \ce{NAD+}}
 \end{equation}
 
-Given the previous few equations, some rearranging can be done to derive the full equation that represents fermentation. Substituing Equation (3) in Equation (2):
+Given the previous few equations, some rearranging can be done to derive the full equation that represents alcoholic fermentation. Substituing Equation (3) in Equation (2):
 \begin{equation*}
     \ce{Glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> \textcolor{red}{\ce{2CH3CHO}} + \textcolor{red}{\ce{2CO2}} + 2ATP + 2NADH + 2H2O}
 \end{equation*}
