--- a/ia.tex
+++ b/ia.tex
@@ -175,14 +175,14 @@ Where $k$ is is the rate constant and the sum of the powers denote the order of 
 If the order of the reaction is 0, the rate of reaction will not be dependent on the concentration of the reactants, that is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the reactants, that is $V = k[A]^1 = k[A]$.
 
 \subsection{Michaelis Menten Enzyme Kinetics}
-When reactions are enzyme-catalyzed, enzyme kinetics may also be used to predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913 is concerned with the relationship between initial reaction velocity $V_0$ (rate of enzyme catalysis), and the substrate concentration \parencite{biochem}:
+When reactions are enzyme-catalyzed, enzyme kinetics may also be used to predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913, is concerned with the relationship between initial reaction velocity $V_0$ (rate of enzyme catalysis), and the substrate concentration (Berg et al., 2006):
 \begin{equation}
     \ce{E + S <=>[k_1][k_{-1}] ES ->[k_2] E + P}
 \end{equation}
 
 Where
 \begin{itemize}[topsep=\parskip, noitemsep]
-    \item E denotes the enzyme zyamse, the main enzyme responsible for fermentation in yeast
+    \item E denotes the enzyme zyamse, the main enzyme responsible for fermentation in yeast (“Enzymes - Understanding Ingredients for the Canadian Baker”, 2015)
     \item S denotes the substrate, the glucose solution
     \item P denotes the product, the carbon dioxide gas formed
     \item ES denotes the enzyme substrate complex, an intermediate step in where the enzyme temporarily binds to the substrate, which eventually gets dissociated into the same enzyme and the product
@@ -218,7 +218,7 @@ And the rate of breakdown of \ce{ES} is given by:
     (k_{-1} + k_2) [\ce{ES}]
 \end{equation}
 
-In 1924, George Briggs and John Haldane proposed the steady state assumption to further simplify enzyme kinetics, which assumes that the rate of formation and the rate of breakdown of \ce{ES} are equal \parencite{biochem}:
+In 1924, George Briggs and John Haldane proposed the steady state assumption to further simplify enzyme kinetics, which assumes that the rate of formation and the rate of breakdown of \ce{ES} are equal (Berg et al., 2006):
 \begin{equation}
     k_1[\ce{E}][\ce{S}] = (k_{-1} + k_2) [\ce{ES}]
 \end{equation}
@@ -243,14 +243,14 @@ Solving Equation (17) for [\ce{E}] and substituting it in Equation (16) gives:
     [\ce{ES}] = \frac{([\ce{E_T}] - [\ce{ES}]) [\ce{S}]}{K_m}
 \end{equation}
 
-Rearranging equation (18) to represent [\ce{ES}] in terms of known values:
+Rearranging Equation (18) to represent [\ce{ES}] in terms of known values:
 \begin{equation}
-    [\ce{ES}] = [\ce{E_T}]\frac{[\ce{S}]}{\ce{S} + K_m}
+    [\ce{ES}] = [\ce{E_T}]\frac{[\ce{S}]}{[\ce{S}] + K_m}
 \end{equation}
 
 Taking Equation (11) and substituting [\ce{ES}]:
 \begin{equation}
-    V_0 = k_2[\ce{E_T}]\frac{[\ce{S}]}{\ce{S} + K_m}
+    V_0 = k_2[\ce{E_T}]\frac{[\ce{S}]}{[\ce{S}] + K_m}
 \end{equation}
 
 $k_2[\ce{E_T}]$ can also be used to describe the reaction velocity. If [\ce{E_t}] was used in place of [\ce{ES}] in Equation (11), all enzymes are undergoing catalysis. This state defined as $V_{max}$, the maximum reaction velocity for a set of conditions. Rewriting Equation (20) gives the final Michaelis Menten equation \parencite{biochem}:
