formatting up to page 7

--- a/ia.tex
+++ b/ia.tex
@@ -253,7 +253,7 @@ Taking Equation (11) and substituting [\ce{ES}]:
     V_0 = k_2[\ce{E_T}]\frac{[\ce{S}]}{[\ce{S}] + K_m}
 \end{equation}
 
-$k_2[\ce{E_T}]$ can also be used to describe the reaction velocity. If [\ce{E_t}] was used in place of [\ce{ES}] in Equation (11), all enzymes are undergoing catalysis. This state defined as $V_{max}$, the maximum reaction velocity for a set of conditions. Rewriting Equation (20) gives the final Michaelis Menten equation \parencite{biochem}:
+$k_2[\ce{E_T}]$ can also be used to describe the reaction velocity. If [\ce{E_t}] was used in place of [\ce{ES}] in Equation (11), all enzymes are undergoing catalysis. This state defined as $V_{max}$, the maximum reaction velocity for a set of conditions. Rewriting Equation (20) gives the final Michaelis Menten equation (Berg et al., 2006):
 \begin{equation}
     V_0 = V_{max}\frac{[S]}{[S] + K_m}
 \end{equation}
@@ -292,7 +292,7 @@ Before starting the lab, physical, environmental, and ethical safety issues must
     \hline
     Wiring and electronics & Baggy clothing should not be worn to avoid the risk of accidentally tangling with wires. If not used in an experiment, chemicals should be kept far away from electronics.\\
     \hline
-    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted \parencite{baking-yeast-disposal}. Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. \parencite{sewer-disposal}\\
+    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted (Holmes, n.d.). Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. (“Sewer Disposal: What Can Go Down the Drain?”, 2021)\\
     \hline
     Wasting yeast & Yeast used in this experiment is also used in baking, and wasting it could be an ethical concern. Any unused yeast that has not been contaminated with a scoopula should be returned.\\
     \hline
@@ -302,7 +302,7 @@ Before starting the lab, physical, environmental, and ethical safety issues must
 \end{table}
 
 \subsection{Hypothesis}
-Given that the yeast was fully activated and dissolved, the concentration of carbon dioxide produced will increase linearly for a short time after glucose is added, until tapering off, such that the rate of carbon dioxide production reaches 0 as the reaction reaches equilibrium. For lower concentrations of glucose, the initial reaction velocity and the final concentration of carbon dioxide gas produced will be smaller than higher concentrations of glucose. When plotting the initial reaction velocity against various concentrations of glucose, the curve of best-fit will fit the Michaelis Menten kinetics model, passing through the origin.
+Given that the yeast was fully activated and dissolved, the concentration of carbon dioxide produced will increase linearly for a short time after glucose is added, until tapering off, such that the rate of carbon dioxide production reaches zero as the reaction reaches equilibrium. For lower concentrations of glucose, the initial reaction velocity and the final concentration of carbon dioxide gas produced will be smaller than higher concentrations of glucose. When plotting the initial reaction velocity against various concentrations of glucose, the curve of best fit will fit the Michaelis Menten kinetics model, passing through the origin.
 
 \newpage
 
