format up to 9 and my -> the

--- a/ia.tex
+++ b/ia.tex
@@ -292,7 +292,7 @@ Before starting the lab, physical, environmental, and ethical safety issues must
     \hline
     Wiring and electronics & Baggy clothing should not be worn to avoid the risk of accidentally tangling with wires. If not used in an experiment, chemicals should be kept far away from electronics.\\
     \hline
-    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted (Holmes, n.d.). Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. (“Sewer Disposal: What Can Go Down the Drain?”, 2021)\\
+    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted (Holmes, n.d.). Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well (“Sewer Disposal: What Can Go Down the Drain?”, 2021). \\
     \hline
     Wasting yeast & Yeast used in this experiment is also used in baking, and wasting it could be an ethical concern. Any unused yeast that has not been contaminated with a scoopula should be returned.\\
     \hline
@@ -308,10 +308,10 @@ Given that the yeast was fully activated and dissolved, the concentration of car
 
 % todo table below or following table
 \subsection{Variables}
-The following table lists out all dependent, independent, and control variables used in my experiment, along with reasons and details to why each variable was chosen to be a specific type:
+The following table lists out all dependent, independent, and control variables used in the experiment, along with reasons and details to why each variable was chosen to be a specific type:
 \begin{table}[H]
 \centering
-\caption{Variables used in my experiment}
+\caption{Variables used in the experiment}
 \label{table:2}
 \begin{tabularx}{\textwidth} {
     | >{\hsize=.2\hsize \linewidth=\hsize \raggedright\arraybackslash}X
@@ -341,7 +341,7 @@ The following table lists out all dependent, independent, and control variables 
 \newpage
 
 \subsection{Apparatus and Experimental Setup}
-The following materials were used in my experiment:
+The following materials were used in the experiment:
 \begin{table}[H]
 \centering
 \caption{Categorized materials list}
@@ -366,7 +366,7 @@ The following materials were used in my experiment:
     Devices & \textbullet Barnstead/Thermolyne magnetic stirring hotplate \\
     & \textbullet Vernier LabQuest2 \\
     & \textbullet Vernier stainless steel temperature probe \\
-    & \textbullet A\&D EJ-200 scale $(\pm0.005\,\si{g})$ \\
+    & \textbullet A\&D EJ-200 scale $(\pm0.01\,\si{g})$ \\
     & \textbullet Vernier \ce{CO2} gas sensor \\
     \hline
 \end{tabularx}
@@ -540,7 +540,7 @@ Additionally, escaping carbon dioxide could also be a contributing factor, but i
 These skewed results may also reflect the raw data obtained from the plotted concentration-time graphs. For example, the reaction velocity in Graph (b) from Appendix 2 seems to change at about 350 seconds. This sudden change in slope is believed to be incoherent stirring, since the dent at the bottom of the Nalgene bottle makes it hard for the stir bar to reach every corner of the bottle. Lastly, Graph (d) from both Appendix 2 and 3, which both happen to come from a solution with 1g of glucose added, seems to vaguely emulate the behavior of a first order reaction. A potential explanation for this could be the time it takes for a larger amount of glucose to dissolve, giving an underestimate for the initial reaction velocity. Unsurprisingly, these three graphs also have the smallest $R^2$ values with regards to their lines of best fit.
 
 \section{Suggestions for Future Study}
-Throughout all of my trials, the reaction was stopped before reaching equilibrium, so the end behaviour of the reaction could not be studied. By giving the yeast more time for fermentation and potentially collecting the produced carbon dioxide gas through water displacement methods could allow for further analysis on theoretical and actual yield.
+Throughout all of the trials, the reaction was stopped before reaching equilibrium, so the end behaviour of the reaction could not be studied. By giving the yeast more time for fermentation and potentially collecting the produced carbon dioxide gas through water displacement methods could allow for further analysis on theoretical and actual yield.
 
 \section{Conclusion}
 Although the experiment did not match up perfectly with the theory, the results still made sense as a whole for a sufficient level of analysis. Evidently, this experiment models an extremely downscaled version of the many aspects involved in baking, thus presenting itself as more of a study into fermentation and enzyme kinetics rather than a practical guide to baking the best loaf of bread. In conclusion, the explanation of yeast producing carbon dioxide to cause bread to rise is widely accepted by many, but also an understatement, because it often unacknowledges the complex and fascinating chemical mechanisms involved.
