last min formatting (1)

--- a/ia.tex
+++ b/ia.tex
@@ -38,7 +38,7 @@
 \pagenumbering{arabic}
 
 \section{Introduction}
-I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually led me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to make my own bread, finding and reading basic recipes with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exist many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these different types of dough is the amount of sugar used, and although some of these recipes do not call for yeast, I was still interested by its function in baking, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
+I have always enjoyed cooking as a mostly self-taught hobby. Having experimented with multiple aspects of cooking throughout my life eventually led me to explore baking, where I was fascinated by timelapse footages of bread rising in the oven. As such, I was inspired to make my own bread, finding and reading basic recipes with a surface-level understanding of the chemistry involving the release of carbon dioxide from yeast fermentation. However, the realm of baking is very large and not limited to bread only, as there exist many types of doughs for pizza, puff pastry, cookies, etc. One notable difference between these types of dough is the amount of sugar used, and although some of these recipes do not call for yeast, I was still interested by its function in baking, which led me to form my research question: \textbf{``The Relationship between Glucose Concentration and the Rate of Carbon Dioxide Production during the Fermentation Process of Yeast''}.
 
 \section{Background}
 
@@ -48,7 +48,7 @@ of Encyclopaedia Britannica, n.d.).
 
 \medskip
 
-This internal assessment will focus on the use of active dry yeast, which contain pellets of live yeast cells coated with a layer of dehydrated yeast cells, (Sherdon, 2016) allowing it to stay dormant, giving it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37\,\si{\celsius} to 43\,\si{\celsius} (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing, ensuring that the yeast gets dissolved in the water (Poilâne, 2022-02-24).
+This internal assessment will focus on the use of active dry yeast, which contain pellets of live yeast cells coated with a layer of dehydrated yeast cells, (Sherdon, 2016) allowing it to stay dormant, giving it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37\,\si{\celsius} to 43\,\si{\celsius} (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing, ensuring that the yeast gets dissolved in the water (Poilâne, 2022).
 
 \subsection{Aerobic and Anaerobic Respiration in Yeast}
 It is well known that yeast reacts with glucose to produce ethanol and carbon dioxide. To explore the details of how this works, it is crucial to understand how yeast undergoes both aerobic and anaerobic respiration.
@@ -172,10 +172,10 @@ Where $k$ is is the rate constant and the sum of the powers denote the order of 
 
 \medskip
 
-If the order of the reaction is 0, the rate of reaction will not be dependent on the concentration of the reactants, that is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the reactants, that is $V = k[A]^1 = k[A]$.
+If the order of the reaction is zero, the rate of reaction will not be dependent on the concentration of the reactants, that is $V = k[A]^0 = k$. If the order of the reaction is one, the rate of reaction will be proportional to the concentration of the reactants, that is $V = k[A]^1 = k[A]$.
 
 \subsection{Michaelis Menten Enzyme Kinetics}
-When reactions are enzyme-catalyzed, enzyme kinetics may also be used to predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913, is concerned with the relationship between initial reaction velocity $V_0$ (rate of enzyme catalysis), and the substrate concentration (Berg et al., 2006):
+When reactions are enzyme-catalyzed, enzyme kinetics may also be used to predict the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913, is concerned with the relationship between initial reaction velocity $V_0$ (rate of enzyme catalysis), and the substrate concentration (Berg et al., 2006):
 \begin{equation}
     \ce{E + S <=>[k_1][k_{-1}] ES ->[k_2] E + P}
 \end{equation}
@@ -185,7 +185,7 @@ Where
     \item E denotes the enzyme zyamse, the main enzyme responsible for fermentation in yeast (“Enzymes - Understanding Ingredients for the Canadian Baker”, 2015)
     \item S denotes the substrate, the glucose solution
     \item P denotes the product, the carbon dioxide gas formed
-    \item ES denotes the enzyme substrate complex, an intermediate step in where the enzyme temporarily binds to the substrate, which eventually gets dissociated into the same enzyme and the product
+    \item ES denotes the enzyme substrate complex, an intermediate step in which the enzyme temporarily binds to the substrate, which eventually gets dissociated into the same enzyme and the product
 \end{itemize}
 
 \medskip
@@ -253,7 +253,7 @@ Taking Equation (11) and substituting [\ce{ES}]:
     V_0 = k_2[\ce{E_T}]\frac{[\ce{S}]}{[\ce{S}] + K_m}
 \end{equation}
 
-$k_2[\ce{E_T}]$ can also be used to describe the reaction velocity. If [\ce{E_t}] was used in place of [\ce{ES}] in Equation (11), all enzymes are undergoing catalysis. This state defined as $V_{max}$, the maximum reaction velocity for a set of conditions. Rewriting Equation (20) gives the final Michaelis Menten equation (Berg et al., 2006):
+$k_2[\ce{E_T}]$ can also be used to describe the reaction velocity. If [\ce{E_T}] was used in place of [\ce{ES}] in Equation (11), all enzymes are undergoing catalysis. This state defined as $V_{max}$, the maximum reaction velocity for a set of conditions. Rewriting Equation (20) gives the final Michaelis Menten equation (Berg et al., 2006):
 \begin{equation}
     V_0 = V_{max}\frac{[S]}{[S] + K_m}
 \end{equation}
@@ -288,11 +288,11 @@ Before starting the lab, physical, environmental, and ethical safety issues must
     \hline
     Risk of broken glassware & If possible, glassware should be handled with both hands to minimize the chance of breakage. Extra care should be taken during the cleaning process as glassware may be slippery when wet.\\
     \hline
-    Risk of hotplate burns & It is important to not touch the hotplate, even when it is off. Once finished using, the hotplate and any lab apparatus that came in contact with it should be cooled before storing.\\
+    Risk of hotplate burns & It is important to not touch the hotplate, even when it is off. Once finished using, the hotplate and any lab apparatus that came in contact with it should be cooled before storage.\\
     \hline
     Wiring and electronics & Baggy clothing should not be worn to avoid the risk of accidentally tangling with wires. If not used in an experiment, chemicals should be kept far away from electronics.\\
     \hline
-    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted (Holmes, n.d.). Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well (“Sewer Disposal: What Can Go Down the Drain?”, 2021). \\
+    Dumping substances down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted (Holmes, n.d.). Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well (“Sewer Disposal: What Can Go Down the Drain?”, 2021). \\
     \hline
     Wasting yeast & Yeast used in this experiment is also used in baking, and wasting it could be an ethical concern. Any unused yeast that has not been contaminated with a scoopula should be returned.\\
     \hline
@@ -302,7 +302,7 @@ Before starting the lab, physical, environmental, and ethical safety issues must
 \end{table}
 
 \subsection{Hypothesis}
-Given that the yeast was fully activated and dissolved, the concentration of carbon dioxide produced will increase linearly for a short time after glucose is added, until tapering off, such that the rate of carbon dioxide production reaches zero as the reaction reaches equilibrium. For lower concentrations of glucose, the initial reaction velocity and the final concentration of carbon dioxide gas produced will be smaller than higher concentrations of glucose. When plotting the initial reaction velocity against various concentrations of glucose, the curve of best fit will fit the Michaelis Menten kinetics model, passing through the origin.
+Given that the yeast was fully activated and dissolved, the concentration of carbon dioxide produced will increase linearly for a short time after glucose is added, until tapering off, such that the rate of carbon dioxide production approaches zero as the reaction reaches equilibrium. When plotting the initial reaction velocity against various concentrations of glucose, the curve of best fit will fit the Michaelis Menten kinetics model, passing through the origin.
 
 \newpage
 
@@ -377,17 +377,17 @@ The experiment was carried out following the procedure below:
     % \setlength\itemsep{-5pt}
     \item Approximately 0.5\,\si{L} of deionized water was prepared in a 1\,\si{L} beaker and placed on a magnetic stirring hotplate.
     \item The Vernier LabQuest was plugged in with a Vernier temperature probe.
-    \item The water was heated until it reached approximately 37\,\si{\celsius}. The temperature of the hotplate was kept at around 40\,\si{\celsius} to 46\,\si{\celsius} to account for cooling.
+    \item The water was heated until it reached approximately 37\,\si{\celsius}. The temperature of the hotplate was kept at in between 40\,\si{\celsius} and 46\,\si{\celsius} to account for cooling.
     \item 0.10\,\si{g} of glucose and 2.00\,\si{g} of Red Star active dry yeast were weighed
     \item The yeast was deposited in the 250\,\si{mL} Nalgene bottle with the magnetic stir bar.
     \item 100\,\si{mL} of water was measured with a graduated cylinder was poured from the 1\,\si{L} beaker to the bottle.
     \item After screwing the cap on, the bottle transferred to the warm water bath.
     \item The Vernier \ce{CO2} gas sensor was connected and calibrated to read high concentrations of \ce{CO2} gas. The LabQuest was set to 20 seconds per sample for 10 minutes.
-    \item Magnetic stirring was activated for about 10 minutes to mix the yeast solution, ensuring that all the yeast was dissolved and activated. During this phase, observations were recorded and the \ce{CO2} gas sensor was warmed up to read a baseline \ce{CO2} concentration.
+    \item Magnetic stirring was activated for about 10 minutes to mix the yeast solution. During this phase, observations were recorded and the \ce{CO2} gas sensor was warmed up to read a baseline \ce{CO2} concentration.
     \item After the yeast was activated, glucose was deposited in the bottle and the cap was immediately swapped with the \ce{CO2} gas sensor to prevent \ce{CO2} from escaping.
     \item The Nalgene-\ce{CO2} sensor setup was lightly swirled around the beaker, allowing the stir bar to reach all corners of the bottle.
     \item After 10 minutes of fermentation, data was exported to a USB and the \ce{CO2} gas sensor was removed. Observations were made as the reaction took place.
-    \item The \ce{CO2} gas sensor was wiped to remove condensation and fanned to blow away residual \ce{CO2}. The bottle was thoroughly rinsed and also fanned to remove any yeast-glucose solution and residual \ce{CO2}.
+    \item The \ce{CO2} gas sensor was wiped to remove condensation and fanned to blow away residual \ce{CO2}. The bottle was thoroughly rinsed and also fanned.
     \item The 1\,\si{L} beaker was filled with more distilled water if there was not enough to half-submerge the bottle.
     \item Steps 2 to 14 were repeated until 2 trials of data were collected for 0.10\,\si{g}, 0.25\,\si{g}, 0.50\,\si{g}, and 1.00\,\si{g} of glucose.
 \end{enumerate}
@@ -541,7 +541,7 @@ Secondly, the time between experiments could have been too short. Usually the fi
 Additionally, escaping carbon dioxide could also be a contributing factor, but it should have a very minute impact because the bottle was sealed off by an airtight rubber portion of the \ce{CO2} gas sensor.
 
 \medskip
-These skewed results may also reflect the raw data obtained from the plotted concentration-time graphs. For example, the reaction velocity in Graph (b) from Appendix 2 seems to change at about 350 seconds. This sudden change in slope is believed to be incoherent stirring, since the dent at the bottom of the Nalgene bottle makes it hard for the stir bar to reach every corner of the bottle. Lastly, Graph (d) from both Appendix 2 and 3, which both happen to come from a solution with 1g of glucose added, seems to vaguely emulate the behavior of a first order reaction. A potential explanation for this could be the time it takes for a larger amount of glucose to dissolve, giving an underestimate for the initial reaction velocity. Unsurprisingly, these three graphs also have the smallest $R^2$ values with regards to their lines of best fit.
+These skewed results may also reflect the raw data obtained from the plotted concentration-time graphs. For example, the reaction velocity for 0.25\,\si{g} of glucose added in Graph (3) seems to change at about 350 seconds. This sudden change in slope is believed to be incoherent stirring, since the dent at the bottom of the Nalgene bottle makes it hard for the stir bar to reach every corner of the bottle. Lastly, for 1.00\,\si{g} of glucose added in Graphs (2) and (3) seem to vaguely emulate the behavior of a first order reaction. A potential explanation for this could be the time it takes for a larger amount of glucose to dissolve, giving an underestimate for the initial reaction velocity. Unsurprisingly, these three graphs also have the smallest $R^2$ values with regards to their lines of best fit.
 
 \section{Suggestions for Future Study}
 Throughout all of the trials, the reaction was stopped before reaching equilibrium, so the end behaviour of the reaction could not be studied. By giving the yeast more time for fermentation and potentially collecting the produced carbon dioxide gas through water displacement methods could allow for further analysis on theoretical and actual yield.
